--- a/数学.md
+++ b/数学.md
@@ -21,7 +21,7 @@
 
 2019のお盆休みを使って、マセマ社の学習参考書を一気読みしました。<br/>
 気合いを入れて読めば１日1冊は余裕です。おすすめです。<br/>
-時間のあるときに、また難しい専門書に映ればいいかなと思います。<br/>
+時間のあるときに、また難しい専門書に移ればいいかなと思います。<br/>
 
 ### <a href='https://en.wikipedia.org/wiki/Linear_algebra'>線形代数</a>
 
