--- a/数学.md
+++ b/数学.md
@@ -55,7 +55,7 @@
 ここまで読むことができると、結構できることが増えてきて楽しいです。
 「実際に画像をfftで変換して、マスクをかけて、逆fftをする」みたいなプログラムを書いたりしました。
 
-### 統計学
+### <a href="https://en.wikipedia.org/wiki/Statistics">統計学</a>
 #### <a href="https://www.udemy.com/pythonstan">【PythonとStanで学ぶ】仕組みが分かるベイズ統計学入門</a>
 
 <b>期間：2018/10-2018/12</b>
