--- a/数学.md
+++ b/数学.md
@@ -30,6 +30,11 @@
 難しい発展の内容は飛ばしつつ、ルーズリーフにまとめながら、読み進めました。
 理論の基礎ができるので、具体的な例に立ち向かっても怖いものなしですね。もう少し発展した内容の本も、もう一冊読みたいところ。
 
+#### <a href="http://www.chaos.cs.tsukuba.ac.jp/ILA/">情報科学類 情報線形代数 情報メディア創成学類 情報数学IV</a>
+<b>期間：2019/8</b><br/>
+線形代数をもっと踏み込んで学びたかったところ、ちょうどいい教材がアップロードされていました。<br/>
+数学的な内容に加えて、各章に情報処理での応用が書かれていて、とっても面白く読めました。
+
 ### <a href="https://ja.wikipedia.org/wiki/%E5%BE%AE%E5%88%86%E7%A9%8D%E5%88%86%E5%AD%A6">微分積分</a>
 #### <a href="https://www.amazon.co.jp/%E3%82%B9%E3%83%90%E3%83%A9%E3%82%B7%E3%82%AF%E5%AE%9F%E5%8A%9B%E3%81%8C%E3%81%A4%E3%81%8F%E3%81%A8%E8%A9%95%E5%88%A4%E3%81%AE%E5%BE%AE%E5%88%86%E7%A9%8D%E5%88%86%E3%82%AD%E3%83%A3%E3%83%B3%E3%83%91%E3%82%B9%E3%83%BB%E3%82%BC%E3%83%9F%E2%80%95%E5%A4%A7%E5%AD%A6%E3%81%AE%E6%95%B0%E5%AD%A6%E3%81%8C%E3%81%93%E3%82%93%E3%81%AA%E3%81%AB%E5%88%86%E3%81%8B%E3%82%8B-%E5%8D%98%E4%BD%8D%E3%81%AA%E3%82%93%E3%81%A6%E6%A5%BD%E3%81%AB%E5%8F%96%E3%82%8C%E3%82%8B-%E9%A6%AC%E5%A0%B4-%E6%95%AC%E4%B9%8B/dp/4866150904/ref=pd_lpo_sbs_14_t_1?_encoding=UTF8&psc=1&refRID=MZM9FCYNK967F9QRT9Y9">スバラシク実力がつくと評判の微分積分キャンパス・ゼミ</a>
 <b>期間：2019/8</b><br/>
