--- a/1年目.md
+++ b/1年目.md
@@ -1,9 +1,9 @@
 # 文系エンジニア、１年を乗り切りました
-　
-情報システム部で業務をはじめて、ちょうど１年が経ちました。
+
+情報システム部で業務をはじめて、１年が経ちました。
 ここら辺で1年間の振り返りをしよう、ということで。
 
-ちなみに、来週からIoTの研究・開発をする部署に異動です。
+来週からIoTの研究・開発をする部署に異動です。
 
 ## 業務
 
