Update and rename 2年目memo.md to 2年目.md

--- a/2年目.md
+++ b/2年目.md
@@ -1,10 +1,10 @@
-# 2年目にやったことメモ
-
-（3年目突入時に総括予定）
-2019/7-
+# エンジニア2年目頑張りました
 
 ## 業務
 - 画像認識による製品不良の検知
+- コーポレートサイトのインフラ設計・構築
+- Office365の社内への導入
+- BIツール構築
 
 ## 本
 - Pythonで体験してわかるアルゴリズムとデータ構造
@@ -21,6 +21,7 @@
 - アジャイルサムライ
 - いちばんやさしいGit&Githubの教本
 - りあクト！ TypeScriptで始めるつらくないReact開発
+- Amazon Web Servicesインフラサービス活用大全 システム構築/自動化、データストア、高信頼化 
 
 ## インターネット教材
 - 情報線形代数（筑波大学）
@@ -29,3 +30,22 @@
 
 ## その他
 - AtCoder参加
+- AWS
+ - VPC
+ - EC2
+ - ELB
+ - Auto Scaling Group
+ - RDS
+ - CloudFormation
+ - CloudFront
+ - CLoudWatcdh
+ - Lambda (Serverless Framework)
+ - ACM
+ - IAM
+ - NAT Gateway
+- Apache
+- Let's Encpypt
+- Wordpress
+- Office365 / GSuite
+- 自作PC
+- Google Data Portal
