--- a/2年目.md
+++ b/2年目.md
@@ -1,4 +1,7 @@
 # エンジニア2年目頑張りました
+大企業からスタートアップに転職しました～ 
+
+エンジニア続ける理由あたりが大変でしたが、頑張って働いた！
 
 ## 業務
 - 画像認識による製品不良の検知
@@ -6,7 +9,8 @@
 - Office365の社内への導入
 - BIツール構築
 
-## 本
+## 勉強
+### 本
 - Pythonで体験してわかるアルゴリズムとデータ構造
 - Linuxのしくみ
 - マセマシリーズ
@@ -23,12 +27,12 @@
 - りあクト！ TypeScriptで始めるつらくないReact開発
 - Amazon Web Servicesインフラサービス活用大全 システム構築/自動化、データストア、高信頼化 
 
-## インターネット教材
+### インターネット教材
 - 情報線形代数（筑波大学）
 - OpevCVのチュートリアル
 - system-design-primer
 
-## その他
+### その他
 - AtCoder参加
 - AWS
  - VPC
@@ -49,3 +53,6 @@
 - Office365 / GSuite
 - 自作PC
 - Google Data Portal
+
+## 次の目標
+このリポジトリ見たらもう少し頑張れそう。
