--- a/3年目.md
+++ b/3年目.md
@@ -2,7 +2,20 @@
 
 ## 業務
  - コーポレートサイトのインフラ構築・運用
- - React
+ - Reactによるフロントエンド開発
    - React Router
    - Material UI
    - Atmic Design
+ - Intune
+ - Microsoft Defender
+ - Redash導入
+
+## 読んだ本
+ - かんたんUML入門
+ - UIデザインの教科書
+ - 達人に学ぶDB設計 徹底指南書
+ - Software Design 2020年11月号
+ 
+## 学んだ技術
+ - AWS CLI
+ - 
