--- a/3年目.md
+++ b/3年目.md
@@ -15,7 +15,9 @@
  - UIデザインの教科書
  - 達人に学ぶDB設計 徹底指南書
  - Software Design 2020年11月号
+ - プロを目指す人のためのRuby入門
  
 ## 学んだ技術
  - AWS CLI
- - 
+ - AWS DMS
+ - Ruby on Rails introduction
